--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         
     </head>
     <body>
+<!--         Heading -->
        <h2>Login Page</h2>
+<!--         class for container -->
        <div class="container" id="container">
          <div class="form-container sign-up-container">
            <form action="#">
